[package]
name = "rusty-chest"
version = "0.1.0"
authors = ["Louis Ventre <louis.ventre@epitech.eu>"]
edition = "2018"

[dependencies]
conrod_core = "0.63.0"
conrod_winit = "0.63.0"
conrod_glium = "0.63.0"
conrod_derive = "0.63.0"
glium = { version = "0.23" }
find_folder = "0.3.0"
image = "0.21"
rand = "0.6"
